Fix too wide tweets

--- a/scss/_post.scss
+++ b/scss/_post.scss
@@ -293,6 +293,10 @@
       margin-bottom: 0.5em;
     }
 
+    .twitter-tweet {
+      width: unset !important;
+    }
+
     .card {
       text-decoration: none;
       background: $lightPink;
